--- a/views/login.html
+++ b/views/login.html
@@ -14,6 +14,12 @@
     <nav class="nav">
       <div class="text text-center">
         Please Login
+        <br>
+        <br>
+        <div class="text-small text-center "> List of avaiable username/pasword sets
+          <br> Smok / Wawelski ,Baltazar / Gabka, Bartolini / Bartlomiej
+          <br> Sierotka / Marysia, Sven / Sven, PePe / TheMountain
+        </div>
       </div>
     </nav>
     <form id="LogInForm" method='POST' action='/'>
@@ -31,7 +37,7 @@
     </form>
 
     <div class="text-center">
-      Not registered? Click <a href="https://the-Joke-.codeanyapp.com/register">here</a>.
+      Not registered? Click <a href="https://had-undefined.codeanyapp.com/register">here</a>.
     </div>
     <script src="/js/login.js"></script>
 </body>
