--- a/views/register.html
+++ b/views/register.html
@@ -13,7 +13,11 @@
   <nav>
     <nav class="nav">
       <div class="text text-center">
-        Wellcome in registration
+        Welcome in registration
+      </div>
+      <div class="text-small text-center ">
+        Creates temporary user (permanent one in development)
+        <br> no special characters allowed for registration
       </div>
     </nav>
     <form id="SignInForm" method='POST' action='/'>
@@ -44,7 +48,7 @@
     </form>
 
     <div class="text-center">
-      Already registered? Click <a href="https://the-Joke-.codeanyapp.com">here</a>.
+      Already registered? Click <a href="https://had-undefined.codeanyapp.com/">here</a>.
     </div>
     <script src="/js/register.js"></script>
 </body>
